# QtNetWorking_Basic

./: README.md
QWebSocket/: CMakeLists.txt  webClient.cpp  webClient.h  webServer.cpp  webServer.h
QWebSocket/client/: CMakeLists.txt  client.cpp
QWebSocket/server/: CMakeLists.txt  server.cpp
tcp/: CMakeLists.txt  clientSocket.cpp  clientSocket.h  serverSocket.cpp  serverSocket.h
tcp/client/: CMakeLists.txt  client.cpp
tcp/server/: CMakeLists.txt  server.cpp
